--- a/attributes/default.rb.example
+++ b/attributes/default.rb.example
@@ -1,3 +1,5 @@
+default['users'] = ['user']
+
 node.override['libcec']['force_recompile'] = false
 node.override['xbmc']['force_recompile'] = false
 node.override['xbmc']['default_configure_flags'] = [
